fix overuse of mutable lists